<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".result.ResultAct"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtStudentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_name"
        android:gravity="center"
        android:layout_margin="@dimen/_7sdp"
        android:padding="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/english"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:layout_margin="@dimen/_3sdp"/>

        <EditText
            android:id="@+id/edtMaths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maths"
            android:inputType="number"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/_3sdp"/>

        <EditText
            android:inputType="number"
            android:id="@+id/edtScience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/science"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/_3sdp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvStudentName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>