<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnPractice"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_7sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practice"/>

    <EditText
        android:id="@+id/edtNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Number"
        android:inputType="number"
        android:gravity="center"
        android:layout_margin="@dimen/_5sdp"/>

    <Button
        android:id="@+id/btnLoop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loop"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_9sdp"/>

    <TextView
        android:id="@+id/tvLoop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:background="@color/black"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"/>

</LinearLayout>